Avoid breadcrumb overflow

--- a/Core/webroot/scss/partials/_breadcrumbs.scss
+++ b/Core/webroot/scss/partials/_breadcrumbs.scss
@@ -15,5 +15,10 @@
 
   li:last-child {
     @extend .active;
+
+    max-width: 400px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 }
